[project]
name = "replication-cleanrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.1.1",
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "mujoco>=3.3.4",
    "normflows>=1.7.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "openai>=1.95.1",
    "opencv-python>=4.12.0.88",
    "pettingzoo>=1.25.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.6.0",
    "tbparse>=0.0.9",
    "tensorboard>=2.19.0",
    "termcolor>=3.1.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "tyro>=0.9.26",
]
